Fixed issue with FaceDetector in Android.

--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,9 @@ captures/
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 
+.classpath
 .project
 .settings/
+.vscode/
 
 Podfile.lock
