Updated to MLKit 16.1.0

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 
   <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.ionicframework.capacitor.googlemlkitvision">
+      package="com.getcapacitor.plugin.googlemlkitvision">
   </manifest>
